# MSS

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  vetur.config.js
MSSProject/: Dockerfile  conftest.py  entrypoint.sh  manage.py
MSSProject/MSSProject/: asgi.py  settings.py  urls.py  wsgi.py
MSSProject/appointments/: admin.py  apps.py  sheduler.py  urls.py  views.py
MSSProject/appointments/migrations/: 0001_create_appointments_model.py  0002_alter_appointments_options.py
MSSProject/appointments/models/: __init__.py  appointment.py
MSSProject/appointments/repositories/: __init__.py  appointments_repository.py
MSSProject/data_generator/: apps.py
MSSProject/doctor/: admin.py  apps.py  urls.py  views.py
MSSProject/document/: admin.py  apps.py  urls.py  views.py
MSSProject/physical/: admin.py  apps.py  urls.py  views.py
MSSProject/treatment_histories/: __init__.py  admin.py  apps.py  urls.py  views.py
MSSProject/user/: admin.py  repositories.py  urls.py  views.py
MSSProject/userApp/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
mssfront/: Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  router.js  tailwind.config.js
mssfront/roles/: roles.js
mssfront/services/: AppointmentService.js  AuthenticationService.js  CountryService.js  DoctorService.js  DocumentService.js  EmailService.js  LogOutService.js  PhysicalService.js  RegistrationService.js  TreatmentHistoryService.js  UserService.js
mssfront/src/: baseApi.js  index.css  main.js
(+624 files in other folders)
